--- a/-23009/css/contacto.css
+++ b/-23009/css/contacto.css
@@ -4,8 +4,11 @@ body{
     margin: 10px;
     min-width: 400px;
     background-color: rgb(139, 211, 245);
-}
+    }
 
 fieldset{
     box-shadow: 0 0 0.5rem rgba(14, 82, 185, 0.9);
-}
+    display: inline-block;
+    margin: 0.5rem 2.5rem  2.5rem 0.5rem;
+
+        }
