--- a/-23009/css/style.css
+++ b/-23009/css/style.css
@@ -136,6 +136,7 @@ main>aside {
     text-align: center;
     margin: .5rem 1rem .5rem 1rem;
     text-decoration-line: none;
+    align-items: center;
 }
 .title {
     text-align: center;
@@ -154,4 +155,16 @@ textarea {
 }
 .form__section {
     text-align: center;
+}
+@media only screen and (max-width: 600px){
+    .header-logo{
+        display: flex;
+        justify-content: center;
+    }
+    .header-menubar ul li{
+        text-align: justify;
+        justify-content: center;
+        padding: 0.5em;
+        align-items: center;
+    }
 }
